--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -163,7 +163,7 @@
         <p data-w-id="94fa7911-b2f9-314a-6791-5729300315da" class="symptoms-selected-text test"></p>
       </div>
       <div class="div-block-2">
-        <a href="index.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
