--- a/profile.html
+++ b/profile.html
@@ -151,7 +151,7 @@
 
 
 		$(".task").click(function(event) {
-    	$('.entry-information').text($(Hi));
+    	$('.entry-information').text(Hi);
 		})
 
 	   function refresh()
