--- a/profile.html
+++ b/profile.html
@@ -150,7 +150,7 @@
 		var selectedID = 0;
 
 
-		$(".task").click(function(event) {
+		$(".select-field").click(function(event) {
     	$('.entry-information').text("Hi");
 		})
 
