--- a/profile.html
+++ b/profile.html
@@ -35,7 +35,7 @@
 
 		<div class= "multi-selector">
 		<div class = "select-field">
-			<label class = "summary" >Click on a date to see entry info and key insights</label>
+			<label class = "summary" >Click on a date to see entry information</label>
 				 </div>
 			<!---------List of checkboxes and options----------->
 				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
@@ -160,6 +160,11 @@
 			"Reported depression and anxiety",
 			"Reported depression",
 			"Reported weakness"
+		]
+
+		var keyInsights = [
+			"Headaches are most associated with difficulty focusing",
+			""
 		]
 
 
