--- a/profile.html
+++ b/profile.html
@@ -104,6 +104,15 @@
 
 		<div class = "wrapper" id = "goals">
 			<label class = "title">Key Insights</label>
+			<br>
+			<br>
+			<label class = "profilename">
+				Headaches are most associated with difficulty focusing <br>
+				Nausea is most associated with flu symptoms <div>
+				Depression is most associated with anxiety
+			</label>
+
+			<a class= "gradient-button gradient-button-2" onclick = "location.href='insights.html';" id="log">Investigate</a><br/>
 		</div>
 	</div>
 </div>
@@ -160,11 +169,6 @@
 			"Reported depression and anxiety",
 			"Reported depression",
 			"Reported weakness"
-		]
-
-		var keyInsights = [
-			"Headaches are most associated with difficulty focusing",
-			""
 		]
 
 
