--- a/profile.html
+++ b/profile.html
@@ -108,7 +108,7 @@
 			<br>
 			<label class = "profilename">
 				Headaches are most associated with difficulty focusing <br>
-				Nausea is most associated with flu symptoms <div>
+				Nausea is most associated with flu symptoms <br>
 				Depression is most associated with anxiety
 			</label>
 		</div>
