--- a/profile.html
+++ b/profile.html
@@ -113,6 +113,7 @@
 						Headaches are most associated with difficulty focusing
 					</label>
 			</div>
+			</div>
 
 			<div class="progress-circle-container">
 				<div class = "mini">
@@ -120,12 +121,14 @@
 						Nausea is most associated with flu symptoms 
 					</label>
 			</div>
+			</div>
 
 			<div class="progress-circle-container">
 				<div class = "mini">
 					<label class = "profilename">
 						Depression is most associated with anxiety
 					</label>
+			</div>
 			</div>
 			
 
