--- a/profile.html
+++ b/profile.html
@@ -107,6 +107,7 @@
 			<br>
 			<br>
 
+			<div class = "goalstab">
 			<div class="progress-circle-container">
 				<div class = "mini">
 					<label class = "profilename">
