--- a/profile.html
+++ b/profile.html
@@ -131,6 +131,7 @@
 					</label>
 			</div>
 			</div>
+			</div>
 			
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insights.html';" id="log">Investigate</a><br/>
