--- a/profile.html
+++ b/profile.html
@@ -134,7 +134,7 @@
 			</div>
 			
 
-			<a class= "gradient-button gradient-button-2" onclick = "location.href='insights.html';" id="log">Investigate</a><br/>
+			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate</a><br/>
 		</div>
 	</div>
 </div>
