--- a/profile.html
+++ b/profile.html
@@ -109,7 +109,7 @@
 			<div class = "goalstab">
 			<div class="progress-circle-container">
 				<div class = "mini">
-					<label class = "profilename">
+					<label class = "summary">
 						Headaches are most associated with difficulty focusing
 					</label>
 			</div>
@@ -117,7 +117,7 @@
 
 			<div class="progress-circle-container">
 				<div class = "mini">
-					<label class = "profilename">
+					<label class = "summary">
 						Nausea is most associated with flu symptoms 
 					</label>
 			</div>
@@ -125,7 +125,7 @@
 
 			<div class="progress-circle-container">
 				<div class = "mini">
-					<label class = "profilename">
+					<label class = "summary">
 						Depression is most associated with anxiety
 					</label>
 			</div>
