--- a/profile.html
+++ b/profile.html
@@ -110,7 +110,7 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 					<label class = "summary">
-						Headaches are most associated with difficulty focusing
+						Headaches <br> are most associated with difficulty focusing
 					</label>
 			</div>
 			</div>
@@ -126,7 +126,7 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 					<label class = "summary">
-						Depression is most associated with anxiety
+						Depression <br> is most associated with anxiety
 					</label>
 			</div>
 			</div>
