--- a/profile.html
+++ b/profile.html
@@ -110,7 +110,7 @@
 			<div class="progress-circle-container">
 				<div class = "mini">
 					<label class = "summary">
-						Headaches <br> are most associated with difficulty focusing
+						Headaches <br> are most associated with poor focus
 					</label>
 			</div>
 			</div>
