--- a/profileinfo.html
+++ b/profileinfo.html
@@ -318,6 +318,7 @@ Shortness of Breath
                         </form>
                      </div>
               </div>
+              <a href = "homepage.html">Skip</a>
               <a class="gradient-button gradient-button-2" href ="homepage.html" style = "width:100%;">Proceed</a><br />
           </div>
         </div>
@@ -395,7 +396,7 @@ Shortness of Breath
                l2.className = "active" ;
                l3.className ="";
       }else{
-        window.location.href = "signup.html";
+        window.open("signup.html?#");
       }
     }
     function proceed(){
