--- a/profile.html
+++ b/profile.html
@@ -41,49 +41,48 @@
 				 <div class = "list" style = "overflow-y:scroll;height: 300px; ">
 				   <label class = "title"></label>
 			
-				   <label id = "1" class = "task" onclick = "select(this.id);">
+				   <label id = "1" details = "Reported headache, depression and difficulty focusing" class = "task" onclick = "select(this.id);">
 						September 1st 2021 
 				</label>
 			
-				  <label id = "2" class = "task" onclick = "select(this.id);">  
+				  <label id = "2" details = "Reported nausea and flu symptoms" class = "task" onclick = "select(this.id);">  
 						September 9th 2021
 				  </label>
 			
-				   <label id = "3" class = "task" onclick = "select(this.id);">
+				   <label id = "3" details = "Reported headache and difficulty focusing" class = "task" onclick = "select(this.id);">
 						September 25th 2021  
 				 </label>
 			
 				 <label class = "title"></label>
-					   <label id = "4" class= "task" onclick = "select(this.id);">
+					   <label id = "4" details = "Reported stomach pain, nausea and flu symptoms" class= "task" onclick = "select(this.id);">
 						October 3rd 2021
 				 </label>
 			
-				   <label id = "5" class = "task" onclick = "select(this.id);">
+				   <label id = "5" details = "Reported weakness and achiness" class = "task" onclick = "select(this.id);">
 						October 12th 2021
 				 </label>
 			
-				 <label id = "6" class = "task" onclick = "select(this.id);">
+				 <label id = "6" details = "Reported difficulty breathing" class = "task" onclick = "select(this.id);">
 						October 20th 2021
 				 </label>
 			
-				 <label id = "7" class = "task" onclick = "select(this.id);">
+				 <label id = "7" details = "Reported depression and anxiety" class = "task" onclick = "select(this.id);">
 						November 1st 2021
 				</label>
 			
-				<label id = "8" class = "task" onclick = "select(this.id);">
+				<label id = "8" details = "Reported depression and anxiety" class = "task" onclick = "select(this.id);">
 						November 2nd 2021
 				</label>
 			
-				<label id = "9" class = "task" onclick = "select(this.id);">
+				<label id = "9" details = "Reported depression" class = "task" onclick = "select(this.id);">
 						November 3rd 2021
 				</label>
 			
-				<label id = "10" class = "task" onclick = "select(this.id);">
+				<label id = "10" details = "Reported weakness" class = "task" onclick = "select(this.id);">
 						November 4th 2021
 				</label>
 				 
 				 </div>
-
 		</div>
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
@@ -178,26 +177,13 @@
 
 		var selected = false;
 		var id = 0;
-		var selectedID = 0;
-
-		var entryInfo = [
-			"Reported headache, depression and difficulty focusing",
-			"Reported nausea and flu symptoms",
-			"Reported headache and difficulty focusing",
-			"Reported stomach pain, nausea and flu symptoms",
-			"Reported weakness and achiness",
-			"Reported difficulty breathing",
-			"Reported depression and anxiety",
-			"Reported depression and anxiety",
-			"Reported depression",
-			"Reported weakness"
-		]
 
 
-		$(".select-field").click(function(event) {
-    	$('.entry-information').text("Hi");
+		$(".body-part").click(function(event) {
+          $('.selected-part-name').text($(this).attr('part-name'));
 		})
 
+		
 	   function refresh()
 	   {
 			docname.value = "";
@@ -222,7 +208,6 @@
 				selected = true;
 
 				item.className = "selected";
-				selectedID = val;
 
 				myilnesses.push(ilnesses[val])
 			}
@@ -242,7 +227,6 @@
 					id = val;
 
 					item.className = "selected";
-					selectedID = val;
 
 					myilnesses.push(ilnesses[val])
 				}
