--- a/profile.html
+++ b/profile.html
@@ -180,7 +180,7 @@
 
 
 		$(".body-part").click(function(event) {
-          $('.selected-part-name').text($(this).attr('part-name'));
+          $('.selected-part-name').text($(this).attr('details'));
 		})
 
 
