--- a/profile.html
+++ b/profile.html
@@ -82,7 +82,7 @@
 						November 4th 2021
 				</label>
 				 
-				 </div>
+			</div>
 		</div>
 		
 		<a class= "gradient-button gradient-button-2" onclick = "location.href='import/physical-checkup.html';" id="log">Add new entry</a><br/>
@@ -134,6 +134,10 @@
 			
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate further</a><br/>
+
+			<div class = "avatar">
+				<img class="logo" src="light-bulb.png" width = "200px">
+			</div>
 		</div>
 	</div>
 </div>
