--- a/profile.html
+++ b/profile.html
@@ -136,7 +136,7 @@
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate further</a><br/>
 
 			<div class = "avatar">
-				<img class="logo" src="light-bulb.png" width = "70px">
+				<img class="logo" src="light-bulb.png" width = "65px" left = 50px>
 			</div>
 		</div>
 	</div>
