--- a/profile.html
+++ b/profile.html
@@ -135,8 +135,8 @@
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate further</a><br/>
 
-			<div class = "avatar">
-				<img class="logo" src="light-bulb.png" width = "65px" margin-left = -50px>
+			<div class = "light-bulb">
+				<img class="logo" src="light-bulb.png" width = "65px">
 			</div>
 		</div>
 	</div>
