--- a/profile.html
+++ b/profile.html
@@ -135,7 +135,7 @@
 
 			<a class= "gradient-button gradient-button-2" onclick = "location.href='insight.html';" id="log">Investigate further</a><br/>
 
-			<div class = "light-bulb">
+			<div class = "avatar" left = 50px>
 				<img class="logo" src="light-bulb.png" width = "65px">
 			</div>
 		</div>
