--- a/profile.html
+++ b/profile.html
@@ -95,13 +95,13 @@
 	
 	<div class = "contentwrap" id = tab2>
 
-		<div class = "wrapper" id = "goals">
+		<div class = "wrapper" id = "goals" style = "top:-20x">
         	<label class = "title">Entry Information</label>
 
 			
         </div>
 
-		<div class = "wrapper" id = "goals">
+		<div class = "wrapper" id = "goals" style = "top:20px">
 			<label class = "title">Key Insights</label>
 			<br>
 			<br>
