--- a/profile.html
+++ b/profile.html
@@ -98,7 +98,10 @@
 		<div class = "wrapper" id = "goals" style = "top:-11px">
         	<label class = "title">Entry Information</label>
 
-			
+
+			<div class = "avatar">
+				<img class="logo" src="3.png" width = "60px">
+			</div>
         </div>
 
 		<div class = "wrapper" id = "goals" style = "top:16px">
