--- a/profile.html
+++ b/profile.html
@@ -99,8 +99,8 @@
         	<label class = "title">Entry Information</label>
 
 
-			<div class = "avatar">
-				<img class="logo" src="3.png" width = "180px">
+			<div class = "avatar" style = "top:20px">
+				<img class="logo" src="3.png" width = "200px">
 			</div>
         </div>
 
