--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. http://www.webflow.com  -->
-<!--  Last Published: Tue Nov 23 2021 21:50:13 GMT+0000 (Coordinated Universal Time)  -->
+<!--  Last Published: Wed Nov 24 2021 05:04:36 GMT+0000 (Coordinated Universal Time)  -->
 <html data-wf-page="619c3dfcf650fa45d6c3915b" data-wf-site="6199562479ca2ddc30e8e28f">
 <head>
   <meta charset="utf-8">
@@ -33,7 +33,7 @@
 	pointer-events: auto;
   fill: rgba(146,81,247,0.2);
   stroke: rgba(146,81,247,0.25);
-   transition-duration: 0.15s;
+  transition-duration: 0.15s;
   transition-timing-function: ease-in-out;
 }
 .override { fill: rgba(146,81,247,0.4) !important}
@@ -51,8 +51,8 @@
         <h1 class="widget-title-heading">Select symptoms and rate severity</h1>
       </div>
       <div class="symptom-list-empty-state-div">
-        <div class="emoji-text">👈🏼</div>
-        <div class="text-block-6">Please select body part to start <br>seeing symptoms.</div>
+        <div class="emoji-text-symptom-select-symtom">👈🏼</div>
+        <div class="empty-state-div-text">Please select body part or &#x27;general&#x27; to see <br>and add related symptoms</div>
       </div>
       <ol role="list" class="symptom-list w-list-unstyled">
         <li related-part="left-eye" symptom-name="fatigue" scale-id="left-eye-fatigue" class="symptom head-detail left-eye">
@@ -112,7 +112,7 @@
           </div>
         </li>
         <li related-part="head" symptom-name="ache" scale-id="head-ache" class="symptom head">
-          <div class="symptom-text">This is some text inside of a div block.</div>
+          <div class="symptom-text">[testing] head general</div>
           <div data-w-id="28fe3725-17b2-8a64-42f8-49a5882326ea" class="scale-submit">
             <div class="form-block w-form">
               <form id="wf-form-scale-form" name="wf-form-scale-form" data-name="scale form" method="post" class="form"><input type="number" class="scale-field w-input" max="10" autofocus="true" maxlength="256" name="scale-2" data-name="Scale 2" min="0" placeholder="0" id="head-ache" required=""><input type="submit" value="+" data-wait="..." class="add-symptom w-button"></form>
@@ -125,8 +125,8 @@
             </div>
           </div>
         </li>
-        <li related-part="right-eye" symptom-name="fatigue" class="symptom">
-          <div class="symptom-text">This is some text inside of a div block.</div>
+        <li related-part="right-eye" symptom-name="fatigue" class="symptom body-general">
+          <div class="symptom-text">[testing] body general</div>
           <div data-w-id="759f2aa6-2a94-8880-d144-299f48a4b935" class="scale-submit">
             <div class="form-block w-form">
               <form id="wf-form-scale-form" name="wf-form-scale-form" data-name="scale form" method="post" class="form"><input type="number" class="scale-field w-input" max="10" autofocus="true" maxlength="256" name="scale-2" data-name="Scale 2" min="0" placeholder="0" id="scale-2" required=""><input type="submit" value="+" data-wait="..." class="add-symptom w-button"></form>
@@ -157,13 +157,17 @@
     </div>
     <div id="w-node-_5da85a94-9579-637c-09f2-7cb0da371976-d6c3915b" class="selected-symptoms-widget-wrapper bottom">
       <div class="widget-title-div">
-        <h1 class="widget-title-heading">Symptoms you&#x27;ve selected</h1>
+        <h1 class="widget-title-heading">Symptoms you&#x27;ve Added</h1>
+      </div>
+      <div id="symptoms-selected-div-empty-state" class="symptoms-selected-div-empty-state">
+        <div class="emoji-text-symptom-added">☝🏼</div>
+        <div class="empty-state-div-text-symptom-added">Add symptoms above to see them <br>here before submitting.</div>
       </div>
       <div id="symptoms-selected-div" class="symptoms-selected-div">
-        <p data-w-id="94fa7911-b2f9-314a-6791-5729300315da" class="symptoms-selected-text test"></p>
+        <p data-w-id="17eb3cc3-1769-9484-3b37-27b6ade795d9" class="symptoms-selected-text test"></p>
       </div>
-      <div class="div-block-2">
-        <a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+      <div class="start-over-submit">
+        <a href="index.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
@@ -261,9 +265,9 @@
               </g>
             </svg></div>
         </a>
-        <a href="#" class="general-symptoms body w-inline-block">
-          <div class="general-symptom-text body">General</div>
-        </a><img src="images/Screen-Shot-2021-11-20-at-11.26.49-PM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1070px" srcset="images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-500.png 500w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-800.png 800w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1080.png 1080w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1600.png 1600w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-2000.png 2000w, images/Screen-Shot-2021-11-20-at-11.26.49-PM.png 2466w" alt="" class="body-img">
+        <a id="general-symptom-button-body" data-w-id="3079750d-b15a-0e31-25ad-91f83011f800" href="#" class="general-symptoms body w-inline-block">
+          <div class="general-symptom-text body">General Body</div>
+        </a><img src="images/Screen-Shot-2021-11-20-at-11.26.49-PM.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1068px" srcset="images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-500.png 500w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-800.png 800w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1080.png 1080w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-1600.png 1600w, images/Screen-Shot-2021-11-20-at-11.26.49-PM-p-2000.png 2000w, images/Screen-Shot-2021-11-20-at-11.26.49-PM.png 2466w" alt="" class="body-img">
       </div>
       <div id="head" data-w-id="6a4d3d22-c8d3-5746-2d39-8c01ccad34a0" class="head-detail">
         <a id="left-eye" part-name="right eye" data-w-id="6a4d3d22-c8d3-5746-2d39-8c01ccad34a5" href="#" class="body-part head-detailed right-eye w-inline-block">
@@ -365,26 +369,26 @@
                 </g>
               </g>
             </svg></div>
-        </a><img src="images/head.png" loading="lazy" sizes="100vw" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
-        <a href="#" class="general-symptoms head w-inline-block">
-          <div class="general-symptom-text head">General</div>
+        </a><img src="images/head.png" loading="lazy" sizes="(max-width: 991px) 100vw, 1068px" srcset="images/head-p-500.png 500w, images/head-p-800.png 800w, images/head.png 979w" alt="" class="body-img">
+        <a id="general-symptom-button-head" data-w-id="5952b97a-a0ab-a95f-01c4-f36c96e1795b" href="#" class="general-symptoms head w-inline-block">
+          <div class="general-symptom-text head">General head</div>
         </a>
       </div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-d6c3915b" class="nav-wrapper">
-<a href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a data-w-id="3821abbf-b962-d39f-49b6-211c02815d11" href="http://../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
-        <div class="tab-label">Goals</div>
-      </a>
-      <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
-        <div class="tab-label">Insights</div>
-      </a>
-      <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+      <a href="index.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
-      <a href="../profile.html" class="nav-buttons w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon" class ="last">
+      <a href="http://../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+        <div class="tab-label">Goals</div>
+      </a>
+      <a href="http://../insights.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
+        <div class="tab-label">Insights</div>
+      </a>
+      <a href="http://../profile.html" class="nav-buttons last w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
     </div>
@@ -426,22 +430,32 @@ $(".body-part").click(function(event) {
       $('.part').find('path').removeClass('override'); //line changed to remove back-Active from all
                   $('.selected-part-name').text('Select a body part');  
     });
+ $("#general-symptom-button-body").click(function (event) {
+      $('.part').find('path').removeClass('override'); //line changed to remove back-Active from all
+                  $('.selected-part-name').text('General Body Symptom');  
+    });
+  $("#general-symptom-button-head").click(function (event) {
+      $('.part').find('path').removeClass('override'); //line changed to remove back-Active from all
+                  $('.selected-part-name').text('General Head Symptoms');  
+    });
  $('#scale').keydown(function (e) {
     if (e.keyCode == 13) {
         e.preventDefault();
         return false;
     }
 });
-  $('.add-symptom').click(function() { 
+$('.add-symptom').click(function() { 
     var $this = $(this);
     var scaleID = $this.closest('.symptom').attr('scale-id').toString();
+    //$("symptoms-selected-div-empty-state").addClass('show-grid');
+    //$("symptoms-selected-div-empty-state").addClass('hide');
     setTimeout(function() { 
          if(($this.closest('.form').siblings('.error-message').css('display')) == 'block'){
              $this.closest('.symptom').addClass('click-override');
              $("#symptoms-selected-div").prepend($('.symptoms-selected-text:first-child').clone().removeClass('test').text(($this.closest('.symptom').attr('related-part') + " : " + ($this.closest('.symptom').attr('symptom-name')) + " (" + document.getElementById(scaleID).value + ")")))
              };
     }, 500);
-    });
+});
 </script>
 </body>
 </html>
