--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -376,19 +376,19 @@
       </div>
     </div>
     <div id="w-node-_89a1d9bb-f3b4-f8bd-1ad6-67033c7daaef-d6c3915b" class="nav-wrapper">
-      <a data-w-id="3821abbf-b962-d39f-49b6-211c02815d11" href="http://../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a data-w-id="3821abbf-b962-d39f-49b6-211c02815d11" href="../homepage.html" class="nav-buttons w-inline-block"><img src="images/home.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Home</div>
       </a>
-      <a href="index.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
+      <a href="physical-checkup.html" aria-current="page" class="nav-buttons w-inline-block w--current"><img src="images/checkup.png" loading="lazy" width="25" height="25" alt="" class="icon current">
         <div class="tab-label">Checkup</div>
       </a>
-      <a href="http://../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../goals.html" class="nav-buttons w-inline-block"><img src="images/goals.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Goals</div>
       </a>
-      <a href="http://../insights.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../insight.html" class="nav-buttons w-inline-block"><img src="images/insight.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Insights</div>
       </a>
-      <a href="http://../profile.html" class="nav-buttons last w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
+      <a href="../profile.html" class="nav-buttons last w-inline-block"><img src="images/profile.png" loading="lazy" width="25" height="25" alt="" class="icon">
         <div class="tab-label">Log History</div>
       </a>
     </div>
