--- a/import/physical-checkup.html
+++ b/import/physical-checkup.html
@@ -167,7 +167,7 @@
         <p data-w-id="17eb3cc3-1769-9484-3b37-27b6ade795d9" class="symptoms-selected-text test"></p>
       </div>
       <div class="start-over-submit">
-        <a href="index.html" aria-current="page" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
+        <a href="physical-checkup.html" class="delete w-inline-block w--current"><img src="images/3668837.png" loading="lazy" width="20" height="20" alt="" class="back-icon">
           <div class="delete-entry-text">Start over</div>
         </a>
         <link rel="prefetch" href="/">
