--- a/profile.html
+++ b/profile.html
@@ -128,6 +128,8 @@
 
 			<div class="progress-circle-container">
 				<div class = "mini">
+					<img class="logo" src="thought bubble.png" width = "210px">
+
 					<label class = "summary">
 						Depression <br> is most associated with anxiety
 					</label>
