--- a/profile.html
+++ b/profile.html
@@ -188,7 +188,7 @@
 		var id = 0;
 
 
-		$(".id").click(function(event) {
+		$(".body-part").click(function(event) {
           $('.entry-information').text($(this).attr('details'));
 		})
 
