--- a/login.html
+++ b/login.html
@@ -69,7 +69,7 @@
             
             function proceed(){
                if(email.value!="" &&pass1.value!="" ){
-                  window.location.replace("homepage.html);
+                  window.location.replace("homepage.html");
                   
                }
             }
