--- a/login.html
+++ b/login.html
@@ -40,7 +40,7 @@
                   </div>
                   <div class="field btn">
                      <div class="btn-layer"></div>
-                     <input type="sumbmit" value="Log in">
+                     <input type="submit" value="Log in">
                   </div>
                </form>
             </div>
