--- a/insight.html
+++ b/insight.html
@@ -66,7 +66,7 @@
 </div>
 <div class = "contentwrap">
 		<div class = "nav">
-			<div class="button" onclick = "location.href='goals.html';">
+			<div class="button" onclick = "location.href='homepage.html';">
 				<div class = "icon"><img src="home.png" width = "30px"></div>
 				<label>Home</label>
 		    </div>
