Added empty div to insights

--- a/insight.html
+++ b/insight.html
@@ -41,7 +41,8 @@
 		<div class = "wrapper" id = "goals">
 			<label class = "title">Data</label>
 			<div class = "empty-insight>
-				
+				<div>👈🏼</div>
+				<div>Select an insight to see details</div>
 			</div>
 			
 		</div>
