Added empt text

--- a/insight.html
+++ b/insight.html
@@ -41,14 +41,16 @@
 		<div class = "wrapper" id = "goals">
 			<label class = "title">Data</label>
 			<div class="empty-insight">
-
+				<div>👈🏼</div>
+				<div>Select one of these insights to view data</div>
 			</div>
 			
 		</div>
 		<div class = "wrapper" id = "goals">
 	 		<label class = "title">Correlation</label>
 			 <div class="empty-insight">
-				
+				<div>☝🏼</div>
+				<div>Correlations derived from data above</div>
 			</div>
                 
 		</div>
