--- a/insight.html
+++ b/insight.html
@@ -29,6 +29,9 @@
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" style="color: purple">Insights</label>
 		
+		<div class = profilepic>
+			<img class = "logo" src="light-bulb.png" width = "70px">
+		</div>
 
 		
 		
