--- a/insight.html
+++ b/insight.html
@@ -29,7 +29,7 @@
 	<div class = "wrapper" id = "checkup">
 		<label class = "title" style="color: purple">Insights</label>
 		
-		<div class = profilepic>
+		<div class = avatar>
 			<img class = "logo" src="light-bulb.png" width = "70px">
 		</div>
 
