--- a/insight.html
+++ b/insight.html
@@ -22,6 +22,55 @@
 	<div class = profilepic>
 			<img class = "logo" src="matthew.png" width = "70px">
 		</div>
+	
+	<div class="insight">
+		<div class="illu">
+			<img class="pic" src="up.png" width="30px" height="30px">
+		</div>
+		<div class="illu">
+			<img class="pic" src="sleep.png" width="30px" height="30px">
+		</div>
+		
+		<div class="para">
+		<label class="title">Sleep</label>
+		<label class="summary" width="40%">0.7% - 1.5hr</label>
+		 </div>
+		 <div class="diagram">
+	  
+		 </div>
+	</div>
+	<div class="insight">
+		<div class="illu">
+			<img class="pic" src="up.png" width="30px" height="30px">
+		</div>
+		<div class="illu">
+			<img class="pic" src="sleep.png" width="30px" height="30px">
+		</div>
+		
+		<div class="para">
+		<label class="title">Sleep</label>
+		<label class="summary" width="40%">0.7% - 1.5hr</label>
+		 </div>
+		 <div class="diagram">
+	  
+		 </div>
+	</div>
+	<div class="insight">
+		<div class="illu">
+			<img class="pic" src="up.png" width="30px" height="30px">
+		</div>
+		<div class="illu">
+			<img class="pic" src="sleep.png" width="30px" height="30px">
+		</div>
+		
+		<div class="para">
+		<label class="title">Sleep</label>
+		<label class="summary" width="40%">0.7% - 1.5hr</label>
+		 </div>
+		 <div class="diagram">
+	  
+		 </div>
+	</div>
 </div>
 <div id = "column">
 	<div class = "contentwrap" id = "tab1">
