--- a/profile.html
+++ b/profile.html
@@ -192,7 +192,7 @@
 
 
 		$(".task").click(function(event) {
-          $('.entry-information').text($(this).attr('details'));
+          $('.entryinfo').text($(this).attr('details'));
 		})
 
 
