--- a/profile.html
+++ b/profile.html
@@ -100,7 +100,8 @@
 		<div class = "wrapper" id = "goals" style = "top:-11px">
         	<label class = "title">Entry Information</label>
 			<br>
-			<div class = "entryinfo"></div>
+
+			<label class = "entryinfo"></label>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
