--- a/insight.html
+++ b/insight.html
@@ -7,6 +7,42 @@
 
   <link rel="stylesheet" href="style.css" />
   <title>Insights</title>
+  <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+    <script type="text/javascript">
+
+      // Load the Visualization API and the corechart package.
+      google.charts.load('current', {'packages':['corechart']});
+
+      // Set a callback to run when the Google Visualization API is loaded.
+      google.charts.setOnLoadCallback(drawChart);
+
+      // Callback that creates and populates a data table,
+      // instantiates the pie chart, passes in the data and
+      // draws it.
+      function drawChart() {
+
+        // Create the data table.
+        var data = new google.visualization.DataTable();
+        data.addColumn('string', 'Topping');
+        data.addColumn('number', 'Slices');
+        data.addRows([
+          ['Mushrooms', 3],
+          ['Onions', 1],
+          ['Olives', 1],
+          ['Zucchini', 1],
+          ['Pepperoni', 2]
+        ]);
+
+        // Set chart options
+        var options = {'title':'How Much Pizza I Ate Last Night',
+                       'width':400,
+                       'height':300};
+
+        // Instantiate and draw our chart, passing in some options.
+        var chart = new google.visualization.PieChart(document.getElementById('chart_div'));
+        chart.draw(data, options);
+      }
+    </script>
 </head>
 <br>
 <body style="background:#f0effa;display: grid;" >
@@ -60,11 +96,11 @@
 				<img class="pic" src="up.png" width="30px" height="30px">
 			</div>
 			<div class="illu">
-				<img class="pic" src="sleep.png" width="30px" height="30px">
+				<img class="pic" src="exercise.png" width="30px" height="30px">
 			</div>
 			
 			<div class="para">
-			<label class="title">Sleep</label>
+			<label class="title">Activity</label>
 			<label class="summary" width="40%">0.7% - 1.5hr</label>
 			 </div>
 			 <div class="diagram">
@@ -73,14 +109,14 @@
 		</div>
 		<div class="insight">
 			<div class="illu">
-				<img class="pic" src="up.png" width="30px" height="30px">
+				<img class="pic" src="down" width="30px" height="30px">
 			</div>
 			<div class="illu">
-				<img class="pic" src="sleep.png" width="30px" height="30px">
+				<img class="pic" src="food_1.png" width="30px" height="30px">
 			</div>
 			
 			<div class="para">
-			<label class="title">Sleep</label>
+			<label class="title">Food (Calories)</label>
 			<label class="summary" width="40%">0.7% - 1.5hr</label>
 			 </div>
 			 <div class="diagram">
@@ -97,10 +133,11 @@
 	<div class="contentwrap" id = "tab2">
 		<div class = "wrapper" id = "goals">
 			<label class = "title">Data</label>
-			<div class="empty-insight">
+			<!--<div class="empty-insight">
 				<div class = "emptyemoji">👈🏼</div>
 				<div class="emptytext">Select one of these insights to view data</div>
-			</div>
+			</div>-->
+			<div id="chart_div"></div>
 			
 		</div>
 		<div class = "wrapper" id = "goals">
