--- a/profile.html
+++ b/profile.html
@@ -101,7 +101,7 @@
         	<label class = "title">Entry Information</label>
 			<br>
 
-			<label class = "entryinfo"></label>
+			<label class = "summary"></label>
 
 
 			<div class = "avatar" style = "top:8px; left:330px">
@@ -193,7 +193,7 @@
 
 
 		$(".task").click(function(event) {
-          $('.entryinfo').text($(this).attr('details'));
+          $('.summary').text($(this).attr('details'));
 		})
 
 
